# mesmer.ai

./: .gitignore  CLAUDE.md  PLAN-AGENT-V2.md  README.md  SHOOT.md  VISUALIZATION.md  pyproject.toml
benchmarks/: .gitignore  README.md
docs/: .gitignore  components.json  mdx-components.tsx  package.json  pnpm-lock.yaml
mesmer/: __init__.py
plans/: refined-graph-plan.md  refined-scenario.md
scenarios/: README.md  extract-dvllm-support-tools.yaml  extract-dvllm-tools.yaml  extract-system-and-tools.yaml  extract-system-prompt-continuous.yaml  extract-system-prompt-ws.yaml  extract-system-prompt.yaml  full-redteam-report.yaml  full-redteam-with-execution.yaml  rag-document-injection-proof.yaml
tests/: conftest.py  test_artifacts.py  test_belief_graph.py  test_belief_graph_wiring.py  test_belief_planner_eval.py  test_beliefs.py  test_bench_orchestrator.py  test_bench_trace.py  test_bench_viz.py  test_canary_judge.py  test_cli.py  test_compressor.py  test_context.py  test_evidence_extractor.py  test_executive_dispatch.py  test_field_modules_load.py  test_graph.py  test_graph_compiler.py  test_human_broker.py  test_judge.py  test_judge_trial_success.py  test_keys.py  test_leader_chat.py  test_leader_verdict.py  test_loop.py  test_memory.py  test_module.py  test_module_catalog.py  test_objective_awareness.py  test_prompt_tier_render.py  test_registry_tier.py  test_scenario.py  test_scenario_repository.py  test_scratchpad.py  test_storage.py  test_strategy_library.py  test_talk_to_operator.py  test_targets.py  test_trace_events.py  test_update_scratchpad.py  (+1 more)
(+272 files in other folders)
